--- a/game.html
+++ b/game.html
@@ -2,12 +2,7 @@
 <html>
 
 <head>
-        <div class="topnav">
-                <a href="home.html">Home</a>
-                <a class="active" href="game.html">Game</a>
-                <a href="contact.html">Contact</a>
-                    </div>
-                   
+        
   <title>TicTacToe</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,6 +12,11 @@
 </head>
 
 <body>
+        <div class="topnav">
+                <a class="active" href="home.html">Home</a>
+                <a href="game.html">Game</a>
+                <a href="contact.html">Contact</a>
+                    </div>
   <header>
     <h1>Tic Tac Toe</h1>
   </header>
